2002-03-22  Eric Blake  <ebb9@email.byu.edu>

	Update to automake 1.6, autoconf 1.53.
	* .cvsignore: Ignore new configuration file.
	* Makefile.in: Regenerate.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* doc/Makefile.in: Regenerate.
	* src/Makefile.in: Regenerate.
	* src/config.h.in: Regenerate.
	* src/platform.h: Remove name conflict.

2002-03-14  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ProcessAmbiguousName): Fix bug 2761.

2002-03-12  Eric Blake  <ebb9@email.byu.edu>

	* src/double.cpp (operator<, operator>): The commit on Feb 25 was
	flawed. THIS patch finally fixes bug 2700.

2002-03-12  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ProcessAND_AND): Fix bug 2750.

2002-03-08  Eric Blake  <ebb9@email.byu.edu>

	* src/option.cpp (makeStrippedCopy): Let -bootclasspath ''
	override $BOOTCLASSPATH.

2002-03-06  Andrew M. Inggs  <aminggs@yahoo.co.uk>

	* src/control.cpp (Control): Check for null in +DR reports - bug
	1792, patch 262.

2002-03-06  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h: 
	* src/ast.cpp:
	* src/dump.cpp:
	* src/semantic.h:
	* src/unparse.cpp:
	* src/java.g: Rename FloatingPointLiteral to FloatLiteral.
	* src/gencode.java: Add IsHexDigit, IsOctalDigit.
	* src/javaact.cpp:
	* src/javaact.h:
	* src/javadcl.h:
	* src/javadef.h:
	* src/javaprs.h:
	* src/javasym.h:
	* src/code.h: Regenerate.
	* src/scanner.h (CheckOctalLiteral): Delete.
	* src/scanner.cpp (ClassifyNumericLiteral): Correctly tokenize
	numeric literals according to JLS chapter 3.
	(ClassifyCharLiteral, ClassifyStringLiteral): Detect bad escape
	sequences during parsing, not syntax or semantic analysis.
	* src/stream.h:
	* src/stream.cpp:
	* src/error.cpp: Fix error messages for parsing literals.
	* src/error.h (INVALID_STRING_VALUE): Delete.
	* src/lookup.cpp:
	* src/expr.cpp: Update to changes in scanner.
	(ProcessAmbiguousName): Remove assertion failure from bad
	java.lang.

2002-03-06  Eric Blake  <ebb9@email.byu.edu>
